Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104060

Bluez LE controller crash on too large advertisement data

XMLWordPrintable

    • Linux/X11
    • 5
    • efc4541af0 (qt/qtconnectivity/dev) ab00a53c8d (qt/qtconnectivity/6.3) ea0b5a3ea6 (qt/qtconnectivity/6.4) ab00a53c8d (qt/tqtc-qtconnectivity/6.3) ea0b5a3ea6 (qt/tqtc-qtconnectivity/6.4) efc4541af0 (qt/tqtc-qtconnectivity/dev)
    • Team A Foundation Sprint 60

      By creating a QLowEnergyController peripheral device and starting advertisement which has a 16 byte UUID set with 'setServices()', the bluez advertiser crashes. At first look the immediate cause is an out-of-bounds memset() call.

        For Gerrit Dashboard: QTBUG-104060
        # Subject Branch Project Status CR V

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes